# aacesstalk-monorepo

./: .gitignore  IFLOW.md  package.json  pyproject.toml  test.py
apps/admin-web/: vite.config.ts
apps/admin-web/src/app/: app.tsx
apps/backend/: admin_console.py  project.json  pyproject.toml
apps/backend/backend/: main.py  server.py  setup.py
apps/backend/backend/database/: __init__.py
apps/backend/backend/routers/: errors.py
apps/client-rn/: .babelrc.js
apps/client-rn/android/: build.gradle  gradle.properties
apps/client-rn/src/app/: App.tsx
apps/client-rn/src/i18n/: index.ts
apps/client-rn/src/services/: speechRecognizer.ts
backend_data/database/: aacesstalk.sqlite3
data/: .gitignore  card_translation_dictionary.csv  default_core_cards.yml  default_emotion_cards.yml  initial_parent_guides.yml
data/cards/core_cards/: _metadata.json
data/given/: card_translation_dictionary.csv  initial_parent_guides.yml  parent_example_translation_dictionary.csv  parent_example_translation_samples.yml
data/scripts/: core_metadata_dump.py  dictionary_generator.py
libs/py_core/: project.json  pyproject.toml  test_asr.py  test_cli.py  test_vector.py  test_voice.py
libs/py_core/py_core/: __init__.py  cli.py  config.py
libs/py_core/py_core/processing_tools/: generate_image_description.py  inspect_card_translation.py
libs/py_core/py_core/system/: __init__.py  model.py  moderator.py
libs/py_core/py_core/utils/: default_cards.py  lookup_translator.py  (+2 more)
libs/py_database/: pyproject.toml  test_cli.py
libs/py_database/py_database/: database.py  model.py
(+44 files in other folders)
