[project]
name = "aacesstalk"
version = "0.1.0"
description = ""
authors = [{ name = "Young-Ho Kim", email = "yghokim@gmail.com" }, { name = "Zeyu Liu", email = "zeyliu4-c@my.cityu.edu.hk"}]
requires-python = ">=3.11.8, <3.12"
readme = "README.md"
dependencies = ["py_database"]

[dependency-groups]
dev = [
    "flake8==6.0.0",
    "autopep8==2.0.2",
    "pytest==7.3.1",
    "pytest-sugar==0.9.7",
    "pytest-cov==4.1.0",
    "pytest-html==3.2.0",
]

[tool.uv.sources]
py_database = { path = "libs/py_database", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
